--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Image to PDF 20250331 11.30.32_1(2).jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Aiysha Sithiha R</h1>
             <p>Am a student</p>
         </div>
